--- a/.github/workflows/prod__deploy.yml
+++ b/.github/workflows/prod__deploy.yml
@@ -6,61 +6,22 @@ on:
     branches: ["main"]
 
 jobs:
-  config:
-    runs-on: [ubuntu-latest]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Detect deployment url
-        id: detect-deploy-end-point
-        run: |
-          source ./.github/deploy-config.txt 
-          deploy_url=''
-          mode='dev3'
-          branch=${{ github.ref_name }}
-
-          case $branch in
-            dev)
-              mode=$DEV_BRANCH
-              ;;
-            A1)
-              mode=$A1_BRANCH
-              ;;
-            A2)
-              mode=$A2_BRANCH
-              ;;
-            A2b)
-              mode=$A2b_BRANCH
-              ;;
-            *)
-              mode=$OTHER_BRANCH
-              ;;
-          esac
-
-          deploy_url="dena-tsubami-dev-gcp-${mode}-assets-notice-webview"
-          echo "DEPLOYMENT_ENV=$deploy_url" >> $GITHUB_OUTPUT
-          echo "MODE=$mode" >> $GITHUB_OUTPUT
-
-          echo "GITHUB BRANCH: $branch"
-          echo "END POINT DETECTED: $deploy_url"
-          echo "MODE DETECTED: $mode"
-    outputs:
-      DEPLOYMENT_ENV: ${{ steps.detect-deploy-end-point.outputs.DEPLOYMENT_ENV }}
-      MODE: ${{ steps.detect-deploy-end-point.outputs.MODE }}
-
-  deployment:
+  job1:
     runs-on: ubuntu-latest
-    needs: [config]
-    env:
-      DEPLOYMENT_NAME: ${{needs.config.outputs.DEPLOYMENT_ENV}}
-      MODE: ${{needs.config.outputs.MODE}}
+    # Map a step output to a job output
+    outputs:
+      output1: ${{ steps.step1.outputs.test }}
+      output2: ${{ steps.step2.outputs.test }}
     steps:
-      - name: deploy
-        run: |
-          echo "========== Deploying =========="
-          echo "job deploy production server: "
-          echo $DEPLOYMENT_NAME
-          echo "Mode: $MODE"
-          make generate-$MODE
-          echo "========== DONE =========="
+      - id: step1
+        run: echo "test=hello" >> "$GITHUB_OUTPUT"
+      - id: step2
+        run: echo "test=world" >> "$GITHUB_OUTPUT"
+  job2:
+    runs-on: ubuntu-latest
+    needs: job1
+    steps:
+      - env:
+          OUTPUT1: ${{needs.job1.outputs.output1}}
+          OUTPUT2: ${{needs.job1.outputs.output2}}
+        run: echo "$OUTPUT1 $OUTPUT2"
