--- a/.github/workflows/prod__deploy.yml
+++ b/.github/workflows/prod__deploy.yml
@@ -8,20 +8,21 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
-    # Map a step output to a job output
     outputs:
-      output1: ${{ steps.step1.outputs.test }}
-      output2: ${{ steps.step2.outputs.test }}
+      deployment_env: ${{ steps.step2.outputs.DEPLOYMENT_ENV }}
+      mode: ${{ steps.step2.outputs.MODE }}
     steps:
-      - id: step1
-        run: echo "test=hello" >> "$GITHUB_OUTPUT"
-      - id: step2
-        run: echo "test=world" >> "$GITHUB_OUTPUT"
+      - uses: actions/checkout@v4
+      - name: Detect deployment url
+        id: step2
+        uses: ./.github/actions/detect-deploy-environment
   job2:
     runs-on: ubuntu-latest
     needs: job1
     steps:
       - env:
-          OUTPUT1: ${{needs.job1.outputs.output1}}
-          OUTPUT2: ${{needs.job1.outputs.output2}}
-        run: echo "$OUTPUT1 $OUTPUT2"
+          OUTPUT1: ${{needs.job1.outputs.deployment_env}}
+          OUTPUT2: ${{needs.job1.outputs.mode}}
+        run: |
+          echo "Deployment ENV detected: $OUTPUT1"
+          echo "Mode detected: $OUTPUT2"
