--- a/.github/workflows/prod__deploy.yml
+++ b/.github/workflows/prod__deploy.yml
@@ -24,5 +24,8 @@ jobs:
           OUTPUT1: ${{needs.job1.outputs.deployment_env}}
           OUTPUT2: ${{needs.job1.outputs.mode}}
         run: |
+          echo "========== Deploying =========="
           echo "Deployment ENV detected: $OUTPUT1"
           echo "Mode detected: $OUTPUT2"
+          make generate-$OUTPUT2
+          echo "========== DONE =========="
